--- a/static/index.html
+++ b/static/index.html
@@ -1,39 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>WebSocket Test</title>
     <script>
-        let ws;
+        let ws = null;
 
         function connectWebSocket() {
-            ws = new WebSocket("ws://localhost:8080/ws");
+            if (ws === null) {
+                ws = new WebSocket("ws://localhost:8080/ws");
 
-            ws.onopen = function(event) {
-                console.log("Connected to WebSocket server.");
-            };
+                ws.onopen = function (event) {
+                    console.log("Connected to WebSocket server.");
+                    clearMessages();
+                };
 
-            ws.onmessage = function(event) {
-                displayMessage(event.data);
-            };
+                ws.onmessage = function (event) {
+                    displayMessage(event.data);
+                };
 
-            ws.onerror = function(event) {
-                console.error("WebSocket error:", event);
-            };
+                ws.onerror = function (event) {
+                    console.error("WebSocket error:", event);
+                };
 
-            ws.onclose = function(event) {
-                console.log("WebSocket connection closed.");
-            };
+                ws.onclose = function (event) {
+                    console.log("WebSocket connection closed.");
+                    clearMessages();
+                    displayMessage("Websocket Connection Closed");
+                    ws = null
+                };
+            }
         }
 
         function displayMessage(message) {
             const messagesDiv = document.getElementById("messages");
             messagesDiv.innerHTML += "<p>" + message + "</p>";
         }
+
+        function clearMessages() {
+            const messagesDiv = document.getElementById("messages");
+            messagesDiv.innerHTML = "";
+        }
     </script>
+    <style>
+        #messages-buttons {
+            display: flex;
+            flex-direction: row;
+        }
+    </style>
 </head>
+
 <body>
-    <button onclick="connectWebSocket()">Connect to WebSocket</button>
+    <div id="messages-buttons">
+        <button onclick="connectWebSocket()">Connect to WebSocket</button>
+        <button onclick="clearMessages()">Clear Messages</button>
+    </div>
     <div id="messages"></div>
 </body>
+
 </html>
